# language-engine

./: .gitignore  AI.md  CMakeLists.txt  README.md
examples/: 01_hello_world.mylang  02_variables.mylang  03_arithmetic.mylang  04_strings.mylang  05_truthy_falsy.mylang  06_if_eq.mylang  07_while_counter.mylang  08_multiplication_table.mylang  09_sum_loop.mylang  10_factorial_loop.mylang  11_factorial_recursive.mylang  12_function_library.mylang  13_division_by_zero.mylang  14_string_generator.mylang  15_boolean_logic.mylang  16_guess_number.mylang  17_scopes.mylang  18_nested_functions.mylang  19_final_example.mylang
src/: main.cpp
src/analyzer/: analyzer.cpp  analyzer.hpp
src/common/: context.hpp  diagnostics.cpp  diagnostics.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/lowering/: ir.hpp  lowering.cpp  lowering.hpp
src/parser/: ASTnodes.hpp  parser.cpp  parser.hpp
src/vm/: builtins.cpp  builtins.hpp  vm.cpp  vm.hpp
tests/: main.cpp
tests/analyzer/: test_analyzer.cpp
tests/lexer/: test_lexer.cpp
tests/lowering/: test_lowering.cpp
tests/parser/: test_parser.cpp  test_source_locations.cpp
tests/vm/: test_vm.cpp
